--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,9 +439,11 @@ header .navbar ul li a:hover {
 /* about section ends */
 
 /* skills section starts */
+/* skills section starts */
 .skills {
-  min-height: 90vh;
+  min-height: 10vh;
   background: linear-gradient(to bottom, #57059e, #4a00e0);
+  margin-top: auto;
 }
 .skills h2 {
   color: #fff;
@@ -450,70 +452,56 @@ header .navbar ul li a:hover {
   color: rgb(255, 230, 0);
 }
 .skills .container {
-  background: rgba(0, 0, 22, 0.4);
-  color: #fff;
-  border-radius: 1rem;
-  padding: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 3rem 0; 
   width: 90%;
   margin: auto;
-  margin-top: 2rem;
+ 
+  background: none; /* Remove background */
+  color: #fff;
 }
 
-.skills .container .bar {
-  margin-bottom: 15px;
-  padding: 10px;
-  border-radius: 1rem;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  background: rgba(0, 0, 22, 0.9);
-  transition: 0.2s;
-}
-.skills .container .bar:hover {
-  box-shadow: 0 8px 10px rgba(0, 2, 68, 0.8) !important;
-  background-color: rgba(0, 0, 0, 0.9) !important;
-}
-.skills .container .bar .info {
+.skills .icon {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
-  margin-top: 1rem;
-}
-.skills .container .bar .info i {
-  font-size: 4rem;
-}
-.skills .container .bar .info span {
-  font-size: 2rem;
-  font-weight: 500;
-  font-family: "Poppins";
-  margin-left: 0.5rem;
+  margin: 1rem;
 }
 
-/* skills media queries starts*/
-@media screen and (max-width: 600px) {
- 
-  .skills .container {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    
-  }
-  .skills .container .row {
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: auto;
-    margin: 1rem;
-    /* padding: 2rem 0.2rem 2rem 0.2rem; */
-    gap: 1rem;
-    height: fit-content;
-    overflow: hidden;
-  }
-  .skills
-  {
-    min-height: 280vh;
-  }
- 
+.skills .icon i {
+  font-size: 7rem; 
+  color: #fff;
 }
-/* skills media queries ends*/
+
+.skills .icon span {
+  font-size: 1.5rem;
+  font-weight: 500;
+  font-family: "Poppins";
+  margin-top: 0.5rem;
+  color: #fff;
+}
+.skills .icon:last-child {
+  margin-bottom: 7rem; 
+}
+
+
+@media screen and (max-width: 600px) {
+  .skills .icon i {
+    font-size: 4rem; /* Adjust size for smaller screens */
+  }
+  .skills .icon span {
+    font-size: 1rem;
+  }
+  .skills .icon:last-child {
+    margin-bottom: 3rem; /* Adjust for smaller screens */
+  }
+}
+
 /* skills section ends */
+
+
 
 /* education section starts */
 .education {
